--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+.accordion > .card > .card-header {
+    padding: 0%;
+}
+.accordion > .card > .card-header > button{
+    width: 100%;
+    text-align: left;
+}
+
+#sidenav-main{
+    padding-right: 0%;
+    padding-left: 0%;
+    margin-left: 0%;
+    margin-right: 0%;
+}
+.accordion-icon-dropdown{
+    position: absolute;
+    right: 5%;
+}
