--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <router-outlet></router-outlet>
-<ngx-spinner name="init" template="<img src='http://localhost:4200/assets/img/brand/red.png' />"><p style="color: white;" class="h5 mt-5"> Bienvenido </p></ngx-spinner>
+<ngx-spinner name="init" template="<img src='{{logoClienteInicio}}' />"><p style="color: white;" class="h5 mt-5"> {{mensajeDeBienvenida}} </p></ngx-spinner>
