--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,9 @@
     position: absolute;
     right: 5%;
 }
+
+.error-message{
+  font-size: small;
+  color: rgba(240, 42, 42, 0.685);
+  padding-left: 10px;
+ }
