--- a/src/app/pages/login/pages/login/login.component.html
+++ b/src/app/pages/login/pages/login/login.component.html
@@ -44,15 +44,35 @@
                     <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                   </div>
                   <input class="form-control" placeholder="Email" name="email" formControlName="email" type="email">
-                </div>
+
+                  </div>
+                    <ng-container *ngFor="let validation of
+                      validation_messages.email">
+                      <span class="error-message"
+                        *ngIf="formLogin.get('email').hasError(validation.type)
+                        && (formLogin.get('email').dirty ||
+                        formLogin.get('email').touched)">
+                        {{validation.message}}
+                      </span>
+                    </ng-container>
+
               </div>
               <div class="form-group">
                 <div class="input-group input-group-alternative">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                   </div>
-                  <input class="form-control" placeholder="Password" name="password" formControlName="password" type="password">
+                  <input class="form-control" placeholder="Contraseña" name="password" formControlName="password" type="password">
                 </div>
+                <ng-container *ngFor="let validation of
+                      validation_messages.password">
+                      <span class="error-message"
+                        *ngIf="formLogin.get('password').hasError(validation.type)
+                        && (formLogin.get('password').dirty ||
+                        formLogin.get('password').touched)">
+                        {{validation.message}}
+                      </span>
+                    </ng-container>
               </div>
              <!-- <div class="custom-control custom-control-alternative custom-checkbox">
                 <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
