--- a/src/app/pages/proceso-recoleccion/pages/proceso-recoleccion-page/proceso-recoleccion-page.component.html
+++ b/src/app/pages/proceso-recoleccion/pages/proceso-recoleccion-page/proceso-recoleccion-page.component.html
@@ -88,9 +88,15 @@
           </div>
         </div>
       </div>
-
-      <div class="row">
-        <app-table-basic></app-table-basic>
+      <div class="row mt-5">
+        <div class="col">
+          <div class="card shadow">
+            <div class="card-header border-0">
+              <h3 class="mb-0">Usuarios</h3>
+            </div>
+            <app-table-basic></app-table-basic>
+          </div>
+        </div>
       </div>
     </div>
   </div>
