--- a/src/app/pages/maps/maps.component.html
+++ b/src/app/pages/maps/maps.component.html
@@ -88,16 +88,17 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
-<!-- Page content -->
-<div class="container-fluid mt--7">
-  <div class="row">
-    <div class="col">
-      <div class="card shadow border-0">
-        <div id="map-canvas" class="map-canvas" data-lat="40.748817" data-lng="-73.985428" style="height: 600px;"></div>
+      <div class="row mt-5">
+        <div class="col">
+          <div class="card shadow">
+            <div class="card-header border-0">
+              <h3 class="mb-0">Usuarios</h3>
+            </div>
+            <app-data-table></app-data-table>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
